@@ -2,9 +2,6 @@
 package org.hiero.otter.fixtures.turtle;
 
 import static java.util.Objects.requireNonNull;
-import static org.assertj.core.api.Assertions.fail;
-import static org.hiero.consensus.model.status.PlatformStatus.ACTIVE;
-import static org.hiero.consensus.model.status.PlatformStatus.FREEZE_COMPLETE;
 import static org.hiero.otter.fixtures.turtle.TurtleTestEnvironment.AVERAGE_NETWORK_DELAY;
 import static org.hiero.otter.fixtures.turtle.TurtleTestEnvironment.STANDARD_DEVIATION_NETWORK_DELAY;
 
@@ -17,48 +14,33 @@ import java.nio.file.Path;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.function.BooleanSupplier;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.hiero.consensus.model.node.KeysAndCerts;
 import org.hiero.consensus.model.node.NodeId;
-import org.hiero.consensus.model.status.PlatformStatus;
 import org.hiero.consensus.roster.RosterUtils;
 import org.hiero.otter.fixtures.InstrumentedNode;
 import org.hiero.otter.fixtures.Network;
 import org.hiero.otter.fixtures.Node;
-import org.hiero.otter.fixtures.internal.result.MultipleNodeConsensusResultsImpl;
-import org.hiero.otter.fixtures.internal.result.MultipleNodeLogResultsImpl;
-import org.hiero.otter.fixtures.internal.result.MultipleNodePcesResultsImpl;
-import org.hiero.otter.fixtures.internal.result.MultipleNodeStatusProgressionImpl;
-import org.hiero.otter.fixtures.result.MultipleNodeConsensusResults;
-import org.hiero.otter.fixtures.result.MultipleNodeLogResults;
-import org.hiero.otter.fixtures.result.MultipleNodePcesResults;
-import org.hiero.otter.fixtures.result.MultipleNodeStatusProgression;
-import org.hiero.otter.fixtures.result.SingleNodeConsensusResult;
-import org.hiero.otter.fixtures.result.SingleNodeLogResult;
-import org.hiero.otter.fixtures.result.SingleNodePcesResult;
-import org.hiero.otter.fixtures.result.SingleNodeStatusProgression;
-import org.hiero.otter.fixtures.turtle.app.TurtleTransaction;
+import org.hiero.otter.fixtures.TimeManager;
+import org.hiero.otter.fixtures.TransactionGenerator;
+import org.hiero.otter.fixtures.internal.AbstractNetwork;
 
 /**
  * An implementation of {@link Network} that is based on the Turtle framework.
  */
-public class TurtleNetwork implements Network, TurtleTimeManager.TimeTickReceiver {
+public class TurtleNetwork extends AbstractNetwork implements TurtleTimeManager.TimeTickReceiver {
 
-    private static final Logger log = LogManager.getLogger(TurtleNetwork.class);
+    private static final Logger log = LogManager.getLogger();
 
-    private static final Duration FREEZE_DELAY = Duration.ofSeconds(10);
-
-    private enum State {
-        INIT,
-        RUNNING,
-        SHUTDOWN
-    }
+    private static final Duration DEFAULT_START_TIMEOUT = Duration.ofSeconds(30);
+    private static final Duration DEFAULT_FREEZE_TIMEOUT = Duration.ofSeconds(30);
+    private static final Duration DEFAULT_SHUTDOWN_TIMEOUT = Duration.ZERO;
 
     private final Randotron randotron;
     private final TurtleTimeManager timeManager;
@@ -67,18 +49,16 @@ public class TurtleNetwork implements Network, TurtleTimeManager.TimeTickReceive
     private final List<TurtleNode> nodes = new ArrayList<>();
     private final TurtleTransactionGenerator transactionGenerator;
 
-    private List<Node> publicNodes = List.of();
+    private List<Node> publicNodes = Collections.unmodifiableList(nodes);
     private ExecutorService executorService;
     private SimulatedNetwork simulatedNetwork;
-
-    private State state = State.INIT;
 
     /**
      * Constructor for TurtleNetwork.
      *
-     * @param randotron the random generator
-     * @param timeManager the time manager
-     * @param logging the logging utility
+     * @param randotron           the random generator
+     * @param timeManager         the time manager
+     * @param logging             the logging utility
      * @param rootOutputDirectory the directory where the node output will be stored, like saved state and so on
      * @param transactionGenerator the transaction generator that generates a steady flow of transactions to all nodes
      */
@@ -88,6 +68,7 @@ public class TurtleNetwork implements Network, TurtleTimeManager.TimeTickReceive
             @NonNull final TurtleLogging logging,
             @NonNull final Path rootOutputDirectory,
             @NonNull final TurtleTransactionGenerator transactionGenerator) {
+        super(DEFAULT_START_TIMEOUT, DEFAULT_FREEZE_TIMEOUT, DEFAULT_SHUTDOWN_TIMEOUT);
         this.randotron = requireNonNull(randotron);
         this.timeManager = requireNonNull(timeManager);
         this.logging = requireNonNull(logging);
@@ -100,10 +81,36 @@ public class TurtleNetwork implements Network, TurtleTimeManager.TimeTickReceive
      */
     @Override
     @NonNull
+    protected TimeManager timeManager() {
+        return timeManager;
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    @NonNull
+    protected byte[] createFreezeTransaction(@NonNull final Instant freezeTime) {
+        return TransactionFactory.createFreezeTransaction(freezeTime).toByteArray();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    @NonNull
+    protected TransactionGenerator transactionGenerator() {
+        return transactionGenerator;
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    @NonNull
     public List<Node> addNodes(final int count) {
-        if (state != State.INIT) {
-            throw new IllegalStateException("Cannot add nodes after the network has been started.");
-        }
+        throwIfInState(State.RUNNING, "Cannot add nodes after the network has been started.");
+        throwIfInState(State.SHUTDOWN, "Cannot add nodes after the network has been started.");
         if (!nodes.isEmpty()) {
             throw new UnsupportedOperationException("Adding nodes incrementally is not supported yet.");
         }
@@ -125,7 +132,6 @@ public class TurtleNetwork implements Network, TurtleTimeManager.TimeTickReceive
                 .toList();
         nodes.addAll(nodeList);
 
-        publicNodes = nodes.stream().map(Node.class::cast).toList();
         return publicNodes;
     }
 
@@ -134,29 +140,6 @@ public class TurtleNetwork implements Network, TurtleTimeManager.TimeTickReceive
         final Path outputDir = rootOutputDirectory.resolve("node-" + nodeId.id());
         return new TurtleNode(
                 randotron, timeManager.time(), nodeId, roster, privateKeys, simulatedNetwork, logging, outputDir);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public void start(@NonNull final Duration timeout) {
-        if (state != State.INIT) {
-            throw new IllegalStateException("Cannot start the network more than once.");
-        }
-
-        log.info("Starting network...");
-        state = State.RUNNING;
-        for (final TurtleNode node : nodes) {
-            node.start(Duration.ZERO);
-        }
-
-        transactionGenerator.start();
-
-        log.debug("Waiting for nodes to become active...");
-        if (!timeManager.waitForCondition(allNodesInStatus(ACTIVE), timeout)) {
-            fail("Timeout while waiting for nodes to become active.");
-        }
     }
 
     /**
@@ -181,115 +164,13 @@ public class TurtleNetwork implements Network, TurtleTimeManager.TimeTickReceive
      * {@inheritDoc}
      */
     @Override
-    public void freeze(@NonNull final Duration timeout) {
-        if (state != State.RUNNING) {
-            throw new IllegalStateException("Can only freeze when the network is running.");
-        }
-
-        log.info("Sending freeze transaction...");
-        final TurtleTransaction freezeTransaction =
-                TransactionFactory.createFreezeTransaction(timeManager.now().plus(FREEZE_DELAY));
-        nodes.getFirst().submitTransaction(freezeTransaction.toByteArray());
-
-        log.debug("Waiting for nodes to freeze...");
-        if (!timeManager.waitForCondition(allNodesInStatus(FREEZE_COMPLETE), timeout)) {
-            fail("Timeout while waiting for all nodes to freeze.");
-        }
-
-        transactionGenerator.stop();
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public void shutdown(@NonNull final Duration timeout) throws InterruptedException {
-        if (state != State.RUNNING) {
-            throw new IllegalStateException("Can only shutdown when the network is running.");
-        }
-
-        log.info("Killing nodes immediately...");
-        for (final TurtleNode node : nodes) {
-            node.killImmediately(Duration.ZERO);
-        }
-
-        transactionGenerator.stop();
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public void resume(@NonNull final Duration timeout) {
-        log.info("Resuming network...");
-        for (final TurtleNode node : nodes) {
-            node.start(Duration.ZERO);
-        }
-
-        transactionGenerator.start();
-
-        log.debug("Waiting for nodes to become active again...");
-        if (!timeManager.waitForCondition(allNodesInStatus(ACTIVE), timeout)) {
-            fail("Timeout while waiting for nodes to become active.");
-        }
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    @NonNull
-    public MultipleNodeConsensusResults getConsensusResults() {
-        final List<SingleNodeConsensusResult> results =
-                nodes.stream().map(Node::getConsensusResult).toList();
-        return new MultipleNodeConsensusResultsImpl(results);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @NonNull
-    @Override
-    public MultipleNodeLogResults getLogResults() {
-        final List<SingleNodeLogResult> results =
-                nodes.stream().map(Node::getLogResult).toList();
-
-        return new MultipleNodeLogResultsImpl(results);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    @NonNull
-    public MultipleNodeStatusProgression getStatusProgression() {
-        final List<SingleNodeStatusProgression> statusProgressions =
-                nodes.stream().map(Node::getStatusProgression).toList();
-        return new MultipleNodeStatusProgressionImpl(statusProgressions);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    @NonNull
-    public MultipleNodePcesResults getPcesResults() {
-        final List<SingleNodePcesResult> results =
-                nodes.stream().map(Node::getPcesResult).toList();
-        return new MultipleNodePcesResultsImpl(results);
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
     public void tick(@NonNull final Instant now) {
         if (state != State.RUNNING) {
             return;
         }
 
         simulatedNetwork.tick(now);
-        transactionGenerator.tick(now, publicNodes);
+        transactionGenerator.tick(now, nodes);
 
         // Iteration order over nodes does not need to be deterministic -- nodes are not permitted to communicate with
         // each other during the tick phase, and they run on separate threads to boot.
@@ -305,22 +186,12 @@ public class TurtleNetwork implements Network, TurtleTimeManager.TimeTickReceive
      *
      * @throws InterruptedException if the thread is interrupted while the network is being destroyed
      */
-    public void destroy() throws InterruptedException {
+    void destroy() throws InterruptedException {
         log.info("Destroying network...");
         transactionGenerator.stop();
         for (final TurtleNode node : nodes) {
             node.destroy();
         }
         executorService.shutdownNow();
-    }
-
-    /**
-     * Creates a {@link BooleanSupplier} that returns {@code true} if all nodes are in the given {@link PlatformStatus}.
-     *
-     * @param status the status to check
-     * @return the {@link BooleanSupplier}
-     */
-    private BooleanSupplier allNodesInStatus(@NonNull final PlatformStatus status) {
-        return () -> nodes.stream().allMatch(node -> node.platformStatus() == status);
     }
 }
